Added MultiCreateSuggestion implementation via batches + tests. Added sending CUD events using kafka broker. Added metrics for CUD events, jaeger tracing.
